Implements i18n for iterative download approach.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -344,6 +344,7 @@
                 "downloadChartDataMsgMessage": "Aktuelle Chartdaten herunterladen?",
                 "downloadChartDataMsgButtonYes": "Ja",
                 "downloadChartDataMsgButtonNo": "Nein",
+                "outputFormatText": "Ausgabeformat",
                 "removeSeriesBtnText": "Serie entfernen",
                 "removeSeriesQuestionTitle": "Rückfrage",
                 "removeSeriesQuestionTpl": "Serie '{0}' entfernen?"
