--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -344,6 +344,7 @@
                 "downloadChartDataMsgMessage": "en:Aktuelle Chartdaten herunterladen?",
                 "downloadChartDataMsgButtonYes": "en:Ja",
                 "downloadChartDataMsgButtonNo": "en:Nein",
+                "outputFormatText": "Outputformat",
                 "removeSeriesBtnText": "en:Serie entfernen",
                 "removeSeriesQuestionTitle": "en:Rückfrage",
                 "removeSeriesQuestionTpl": "en:Serie '{0}' entfernen?"
