--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -344,6 +344,7 @@
                 "downloadChartDataMsgMessage": "fr:Aktuelle Chartdaten herunterladen?",
                 "downloadChartDataMsgButtonYes": "fr:Ja",
                 "downloadChartDataMsgButtonNo": "fr:Nein",
+                "outputFormatText": "fr:Ausgabeformat",
                 "removeSeriesBtnText": "fr:Serie entfernen",
                 "removeSeriesQuestionTitle": "fr:Rückfrage",
                 "removeSeriesQuestionTpl": "fr:Serie '{0}' entfernen?"
