--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -854,6 +854,15 @@
             }
         }
     },
+    "Koala.view.container.date.DateTimePicker": {
+        "config": {
+            "data": {
+                "minDateWarnMsg": "fr:Das Datum in diesem Feld muss nach dem {0} liegen.",
+                "maxDateWarnMsg": "fr:Das Datum in diesem Feld muss vor dem {0} liegen.",
+                "warnMsgDateFormat": "d.m.Y"
+            }
+        }
+    },
     "Koala.view.panel.LayerSetTree": {
         "config": {
             "data": {
