--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -882,6 +882,15 @@
             }
         }
     },
+    "Koala.view.container.date.DateTimePicker": {
+        "config": {
+            "data": {
+                "minDateWarnMsg": "Das Datum in diesem Feld muss nach dem {0} liegen.",
+                "maxDateWarnMsg": "Das Datum in diesem Feld muss vor dem {0} liegen.",
+                "warnMsgDateFormat": "d.m.Y"
+            }
+        }
+    },
     "Koala.view.panel.MobileImprint": {
         "config": {
             "data": {
