--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -787,7 +787,8 @@
             "data": {
                 "labelStartDate": "Startdatum",
                 "labelEndDate": "Enddatum",
-                "setFilterButtonText": "Anwenden"
+                "setFilterButtonText": "Anwenden",
+                "invalidInputErrMsg": "Filter kann nicht übernommen werden. Bitte überprüfen Sie Ihre Eingaben."
             }
         }
     },
@@ -887,7 +888,9 @@
             "data": {
                 "minDateWarnMsg": "Das Datum in diesem Feld muss nach dem {0} liegen.",
                 "maxDateWarnMsg": "Das Datum in diesem Feld muss vor dem {0} liegen.",
-                "warnMsgDateFormat": "d.m.Y"
+                "warnMsgDateFormat": "d.m.Y",
+                "endBeforeStartWarnMsg": "Der Startwert muss vor dem Endwert liegen.",
+                "exceedsMaxDurationWarnMsg": "Startwert und Endwert liegen zu weit auseinander."
             }
         }
     },
