--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -809,7 +809,8 @@
             "data": {
                 "labelStartDate": "start date",
                 "labelEndDate": "end date",
-                "setFilterButtonText": "apply"
+                "setFilterButtonText": "apply",
+                "invalidInputErrMsg": "en:Filter kann nicht übernommen werden. Bitte überprüfen Sie Ihre Eingaben."
             }
         }
     },
@@ -909,7 +910,9 @@
             "data": {
                 "minDateWarnMsg": "en:Das Datum in diesem Feld muss nach dem {0} liegen.",
                 "maxDateWarnMsg": "en:Das Datum in diesem Feld muss vor dem {0} liegen.",
-                "warnMsgDateFormat": "d.m.Y"
+                "warnMsgDateFormat": "d.m.Y",
+                "endBeforeStartWarnMsg": "en:Der Startwert muss vor dem Endwert liegen.",
+                "exceedsMaxDurationWarnMsg": "en:Startwert und Endwert liegen zu weit auseinander."
             }
         }
     },
