--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -809,7 +809,8 @@
             "data": {
                 "labelStartDate": "fr:Startdatum",
                 "labelEndDate": "fr:Enddatum",
-                "setFilterButtonText": "fr:Anwenden"
+                "setFilterButtonText": "fr:Anwenden",
+                "invalidInputErrMsg": "fr:Filter kann nicht übernommen werden. Bitte überprüfen Sie Ihre Eingaben."
             }
         }
     },
@@ -859,7 +860,9 @@
             "data": {
                 "minDateWarnMsg": "fr:Das Datum in diesem Feld muss nach dem {0} liegen.",
                 "maxDateWarnMsg": "fr:Das Datum in diesem Feld muss vor dem {0} liegen.",
-                "warnMsgDateFormat": "d.m.Y"
+                "warnMsgDateFormat": "d.m.Y",
+                "endBeforeStartWarnMsg": "fr:Der Startwert muss vor dem Endwert liegen.",
+                "exceedsMaxDurationWarnMsg": "fr:Startwert und Endwert liegen zu weit auseinander."
             }
         }
     },
