modern: in case layer has time series and bar chart, let user decide (msg-box)

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -239,7 +239,11 @@
                 "basigx-button-togglelegend-tooltip": "Legende ein-/ausklappen",
                 "importLocalDataButtonText": "Import",
                 "importLocalDataButtonTooltip": "Lokale Dateien importieren",
-                "importLocalDataWindowText": "Import"
+                "importLocalDataWindowText": "Import",
+                "chartSlctnTitle": "Diagramm wählen",
+                "chartSlctnMsg": "Layer hat Zeitreihen-, als auch Säulendiagramm. Welches Diagramm soll dargestellt werden?",
+                "chartSlctnTimeSeriesBtn": "Zeitreihendiagramm",
+                "chartSlctnBarChartBtn": "Säulendiagramm"
             }
         }
     },
