Introduces the MobileMetadataInfo Panel
- This Introduces the MobileMetadataInfo Panel
- Changes the icons for the mobile searches
- Introduces titlebars for searches
- Close menu zoomToFeature from searches
- Fixes projection issue for zoomToFeature from searches

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -822,7 +822,23 @@
                 "settingsButtonText": "Einstellungen",
                 "moreLayersButtonText": "Weitere Themen",
                 "addLayerButtonText": "Externen WMS hinzufügen",
-                "permalinkButtonText": "Permalink"
+                "permalinkButtonText": "Permalink",
+                "spatialSearchTitle": "Räumliche Suche",
+                "metadataSearchTitle": "Daten und Dienste des Bfs"
+            }
+        }
+    },
+    "Koala.view.panel.MobileMetadataInfo": {
+        "config": {
+            "data": {
+                "name": "Koala"
+            }
+        },
+        "statics": {
+            "fieldNames": {
+                "fileIdentifier": "ID",
+                "abstract": "Abstract",
+                "contact": "Kontakt"
             }
         }
     },
