Introduces spinner to filters for timeseries-chart
This introduces the spinnerfields from the layerfilter to the
timeseries-chart.

Therefore the createTimeRangeFieldset and createPointInTimeFieldset
methods where introdcued to the Filterutil.

They replace the createPointInTimeFilter and createTimeRangeFilter methods
in the LayerFilter.

The createTimeRangeFieldset is reused in the timeseries chart now.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -356,7 +356,9 @@
                 "outputFormatText": "Ausgabeformat",
                 "removeSeriesBtnText": "Serie entfernen",
                 "removeSeriesQuestionTitle": "Rückfrage",
-                "removeSeriesQuestionTpl": "Serie '{0}' entfernen?"
+                "removeSeriesQuestionTpl": "Serie '{0}' entfernen?",
+                "startLabel": "Start",
+                "endLabel": "Ende"
             }
         }
     },
