--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -356,6 +356,7 @@
                 "setFilterBtnText": "OK",
                 "resetFilterBtnText": "Reset",
                 "selectChartLayerComboLabel": "",
+                "selectChartLayerComboEmptyText": "Chart hinzufügen",
                 "undoBtnText": "…zurückzoomen",
                 "downloadBtnText": "Download",
                 "downloadChartDataMsgTitle": "Info",
