--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -355,6 +355,7 @@
                 "setFilterBtnText": "OK",
                 "resetFilterBtnText": "Reset",
                 "selectChartLayerComboLabel": "",
+                "selectChartLayerComboEmptyText": "en:Chart hinzufügen",
                 "undoBtnText": "…zoom back",
                 "downloadBtnText": "Download",
                 "downloadChartDataMsgTitle": "Info",
