--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -934,7 +934,7 @@
             }
         }
     },
-    "Koala.view.panel.MobileImprint": {
+    "Koala.view.panel.MobileHelp": {
         "config": {
             "data": {
                 "title": "fr: Hilfe",
